# ClawLite_VikingEdition

./: .dockerignore  .env.example  .tmp_readme_b6141e3.md  .tmp_readme_c04b10c.md  .tmp_readme_candidates.tsv  AGENTS.md  CHANGELOG.md  CODEX_CONTEXT.md  CONTRIBUTING.md  Dockerfile  PROJECT_LAWS.md  README.candidate.1db9760.md  README.candidate.2283b73.md  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  coverage.yml
.planning/: ASSISTANT_CONTINUITY_INSTRUCTIONS.md  CODE_IDEAS.md  IMPLEMENTATION_PLAN.md  MILESTONES.md  PLANNING_DATA_SCHEMA.md  PROJECT.md  REQUIREMENTS.md  RESEARCH_NOTES.md  ROADMAP.md  SESSION_CONTEXT.md  STATE.md
README_recovery/: INDEX.md  README.066f7d4.md  README.1c54a8b.md  README.6ed5aef.md  README.84dedf3.md  README.9bdebb9.md  README.aa42df4.md  README.ac0e6e9.md  README.c6e7015.md  README.e4ce2f0.md  README.f267ee6.md  README.fd2bbc9.md
clawlite/bus/: events.py  queue.py
clawlite/channels/: base.py  discord.py  inbound_text.py  manager.py  slack.py  telegram.py  telegram_pairing.py
clawlite/cli/: commands.py  onboarding.py  ops.py
clawlite/config/: loader.py  schema.py
clawlite/core/: context_window.py  engine.py  memory.py  memory_backend.py  memory_monitor.py  memory_privacy.py  memory_reporting.py  prompt.py  runestone.py  skills.py  subagent.py  subagent_synthesizer.py
clawlite/dashboard/: dashboard.css  dashboard.js  index.html
clawlite/gateway/: control_handlers.py  dashboard_state.py  payloads.py  request_handlers.py  runtime_builder.py  server.py  status_handlers.py  tool_catalog.py  websocket_handlers.py
clawlite/jobs/: queue.py
clawlite/providers/: catalog.py  codex.py  codex_auth.py  discovery.py  failover.py  hints.py  litellm.py  model_probe.py  qwen_auth.py  registry.py  reliability.py
clawlite/runtime/: __init__.py  autonomy.py  autonomy_actions.py  gjallarhorn.py  self_evolution.py  supervisor.py
clawlite/scheduler/: cron.py  heartbeat.py  types.py
clawlite/session/: store.py
clawlite/tools/: __init__.py  browser.py  cron.py  exec.py  jobs.py  mcp.py  memory.py  message.py  pdf.py  registry.py  sessions.py  skill.py  spawn.py  tts.py  web.py
clawlite/utils/: logger.py  logging.py
clawlite/workspace/: loader.py
docs/: API.md  ARCHITECTURE.md  AUDIT_CORE_CHANNELS.md  AUTONOMY_PLAN.md  CLAWLITE_GAP_ANALYSIS_2026-03-06.md  CONFIGURATION.md  DOCKER.md  OPERATIONS.md  QUICKSTART.md  README.md  RELEASING.md  ROBUSTNESS_SCORECARD.md  RUNBOOK.md  SKILLS.md  SKILL_PORT_MATRIX.md  STATUS.md  TELEGRAM_RELIABILITY_SEMANTICS.md  TERMUX_PROOT_UBUNTU.md  channels.md  cli.md  config.example.json  providers.md  tools.md  workspace.md
docs/generated_architecture/: ARCHITECTURE_FLOWCHARTS.md  ARCHITECTURE_WALKTHROUGH.md  INDEX.md  PROJECT_STRUCTURE_DATA.md
memory/: gap-catalog.json
scripts/: assemble_gif.py  capture_frames.py  docker_setup.sh  generate_architecture_docs.py  install.sh  install_termux_proot.sh  release_preflight.sh  restore_clawlite.sh  smoke_test.sh  update_checkout.sh
tests/bus/: test_queue.py
tests/channels/: test_discord.py  test_inbound_text.py  test_irc.py  test_manager.py  test_outbound_adapters.py  test_rate_limiter.py  test_slack.py  test_telegram.py  test_telegram_aux_updates.py  test_telegram_delivery.py  test_telegram_inbound_dispatch.py  test_telegram_inbound_message.py  test_telegram_inbound_runtime.py  test_telegram_interactions.py  test_telegram_status.py  test_telegram_transport.py
tests/cli/: test_commands.py  test_configure_wizard.py  test_onboarding.py
tests/config/: test_health.py  test_loader.py  test_schema.py
tests/core/: test_context_window.py  test_engine.py  test_huginn_muninn.py  test_injection_guard.py  test_memory.py  test_memory_backend.py  test_memory_consolidator.py  test_memory_curation.py  test_memory_ingest.py  test_memory_ingest_helpers.py  test_memory_maintenance.py  test_memory_monitor.py  test_memory_policy.py  test_memory_proactive.py  test_memory_quality.py  test_memory_reporting.py  test_memory_resources.py  test_memory_search.py  test_memory_ttl.py  test_memory_versions.py  test_norns.py  test_prompt.py  test_runestone.py  test_skills.py  test_skills_new.py  test_subagent.py  (+1 more)
(+785 files in other folders)
