[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawlite"
version = "0.5.0b2"
description = "Portable agentic assistant for Linux"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BarretoClaw"}]
dependencies = [
  "fastapi>=0.112",
  "uvicorn>=0.30",
  "websockets>=12.0",
  "wsproto>=1.2",
  "questionary>=2.0.1",
  "rich>=13.7.1",
  "httpx>=0.27",
  "duckduckgo-search>=6.0.0",
  "beautifulsoup4>=4.12.0",
  "python-telegram-bot>=21.0",
  "discord.py>=2.3.0",
  "slack-bolt>=1.22.0",
  "textual>=0.73.0",
  "playwright>=1.46.0",
  "edge-tts>=6.1.12",
  "groq>=0.11.0",
  "rank_bm25>=0.2.2",
  "loguru>=0.7.2",
  "json-repair>=0.30.0",
  "croniter>=6.0.0",
  "pypdf>=4.0.0",
]

[project.scripts]
clawlite = "clawlite.cli:main"

[tool.setuptools.packages.find]
include = ["clawlite*"]

[tool.setuptools.package-data]
clawlite = [
  "workspace/templates/*.md",
  "workspace/templates/memory/*.md",
  "skills/*/SKILL.md",
  "dashboard/*",
]
