[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clawlite"
version = "0.7.0b0"
description = "Portable agentic assistant for Linux"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "BarretoClaw"}]
dependencies = [
  "fastapi>=0.112,<1.0",
  "uvicorn>=0.30,<1.0",
  "websockets>=12.0,<15.0",
  "wsproto>=1.2,<2.0",
  "rich>=13.7.1,<15.0",
  "httpx>=0.27,<1.0",
  "duckduckgo-search>=6.0.0,<8.0",
  "beautifulsoup4>=4.12.0,<5.0",
  "groq>=0.11.0,<1.0",
  "rank_bm25>=0.2.2,<1.0",
  "loguru>=0.7.2,<1.0",
  "json-repair>=0.30.0,<1.0",
  "croniter>=6.0.0,<4.0",
  "portalocker>=3.0.0,<3.2",
  "pyyaml>=6.0.2,<7.0",
  "cryptography>=42.0,<44.0",
]

[project.optional-dependencies]
browser = [
  "playwright>=1.46.0",
]
runtime = [
  "redis>=5.0.0",
]
observability = [
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
]
telegram = [
  "python-telegram-bot>=21.0",
]
media = [
  "edge-tts>=6.1.12",
  "pypdf>=4.0.0",
]
all = [
  "playwright>=1.46.0",
  "redis>=5.0.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "python-telegram-bot>=21.0",
  "edge-tts>=6.1.12",
  "pypdf>=4.0.0",
]
dev = [
  "playwright>=1.46.0",
  "redis>=5.0.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-exporter-otlp>=1.27.0",
  "python-telegram-bot>=21.0",
  "edge-tts>=6.1.12",
  "pypdf>=4.0.0",
]

[project.scripts]
clawlite = "clawlite.cli:main"

[tool.setuptools.packages.find]
include = ["clawlite*"]

[tool.setuptools.package-data]
clawlite = [
  "workspace/templates/*.md",
  "workspace/templates/memory/*.md",
  "skills/*/SKILL.md",
  "dashboard/*",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "slow: testes de integração lentos (pule com -m 'not slow')",
]
